--- a/_includes/personal/index.html
+++ b/_includes/personal/index.html
@@ -26,7 +26,7 @@
         {%- assign project_tools = project.topics -%}
         {%- assign external      = true -%}
 
-        {% include projects/project-card.html %}
+        {% include personal/project-card.html %}
 
       {%- endif -%}
 
